src/test/ui/parser/keyword.stderr
error: expected identifier, found keyword `break`
  --> $DIR/keyword.rs:3:9
   |
LL | pub mod break {
   |         ^^^^^ expected identifier, found keyword

error: aborting due to previous error

